Cycles SSS node: Passes output failed when scale=0 #42818

Closed
opened 2014-12-06 14:32:59 +01:00 by Leon Cheung · 14 comments
Member

System Information
Windows 8.1 64bit | GTX680

Blender Version
Broken: 2.72.2 367204a

Short description of error
In SSS node, when setting scale=0, Color is still visible in Preview, but failed as passes.

sss_1.jpg

Exact steps for others to reproduce the error
Open attached file, then F12.

SSS.blend

Thanks for checking.

**System Information** Windows 8.1 64bit | GTX680 **Blender Version** Broken: 2.72.2 367204a **Short description of error** In SSS node, when setting scale=0, Color is still visible in Preview, but failed as passes. ![sss_1.jpg](https://archive.blender.org/developer/F129867/sss_1.jpg) **Exact steps for others to reproduce the error** Open attached file, then F12. [SSS.blend](https://archive.blender.org/developer/F129869/SSS.blend) Thanks for checking.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Sergey Sharybin was assigned by Bastien Montagne 2014-12-06 14:47:14 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Not quite sure there is any bug here (kind of makes sense to me that with zero scale, you get noting from sss passes...). Sergey would know!

Not quite sure there is any bug here (kind of makes sense to me that with zero scale, you get noting from sss passes...). Sergey would know!
Author
Member

@mont29, Actually, Something strange is: The "Combined" pass shows exactly what's seen in Preview window, for Combined pass, it's the combination of Diffuse, Glossy, Transmission, SSS.... as mentioned in wiki , but when trying to make Combined pass by combining all passes (including SSS), the result shows that there are no SSS there. But the Combined pass has it, which hardly makes sense, I suppose.

@mont29, Actually, Something strange is: The "Combined" pass shows exactly what's seen in Preview window, for Combined pass, it's the combination of Diffuse, Glossy, Transmission, SSS.... as mentioned in [wiki ](http://wiki.blender.org/index.php/Doc:UK/2.6/Manual/Render/Cycles/Passes#Combining), but when trying to make Combined pass by combining all passes (including SSS), the result shows that there are no SSS there. But the Combined pass has it, which hardly makes sense, I suppose.

I'd say, combined pass wouldn't have SSS at all, I'd even guess SSS part of code is completely skipped in this case. Also, that wiki page is most likely not really up to date? Does not mention SSS passes at all even. Anyway, I'm years-light far from being cycles expert, let's see what say people who know what they are talking about. ;)

I'd say, combined pass wouldn't have SSS at all, I'd even guess SSS part of code is completely skipped in this case. Also, that wiki page is most likely not really up to date? Does not mention SSS passes at all even. Anyway, I'm years-light far from being cycles expert, let's see what say people who know what they are talking about. ;)
Author
Member

Sure. :) BTW, I did some tests. And I can confirm, from user's aspect, that the rule mentioned on wiki still works even with SSS with scale > 0

Sure. :) BTW, I did some tests. And I can confirm, from user's aspect, that the rule mentioned on wiki still works even with SSS with scale > 0
Author
Member

For better understanding:

scale=0:
s2.png

scale=0.3:
s1.png
Pass_Combine.blend

For better understanding: scale=0: ![s2.png](https://archive.blender.org/developer/F129898/s2.png) scale=0.3: ![s1.png](https://archive.blender.org/developer/F129899/s1.png) [Pass_Combine.blend](https://archive.blender.org/developer/F129897/Pass_Combine.blend)
Author
Member

@mont29 I think you may right about it being "skipped" in compositor. It makes sense to me. If it is not a real bug, then there should be some updates on Wiki for such case, to explain why "Combined" pass and Preview result don't follow that rule.

@mont29 I think you may right about it being "skipped" in compositor. It makes sense to me. If it is not a real bug, then there should be some updates on Wiki for such case, to explain why "Combined" pass and Preview result don't follow that rule.

Internally BSSRDF (SSS BSDF) with size of 0 gets replaced with diffuse BSDF, so it's evaluation happens much faster.

Now, pass accumulation was ignoring such a replaced BSDFs, leading to wrong results. Think it's totally reasonable to make it so SSS passes does not depend on internal optimization and gives the same results with zero and near-to-zero sizes.

Will commit fix soon.

As for the diagram and missing mention of SSS in the documentation, do you mind firing a bug report to #Documentation project?

Internally BSSRDF (SSS BSDF) with size of 0 gets replaced with diffuse BSDF, so it's evaluation happens much faster. Now, pass accumulation was ignoring such a replaced BSDFs, leading to wrong results. Think it's totally reasonable to make it so SSS passes does not depend on internal optimization and gives the same results with zero and near-to-zero sizes. Will commit fix soon. As for the diagram and missing mention of SSS in the documentation, do you mind firing a bug report to #Documentation project?

This issue was referenced by blender/blender@7366283c01

This issue was referenced by blender/blender@7366283c0107a350ff9e6ed9d4699e0e1f74aef4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit blender/blender@7366283c01.

Closed by commit blender/blender@7366283c01.

This issue was referenced by blender/cycles@f3b3908d46

This issue was referenced by blender/cycles@f3b3908d46c24825242d641dbad0ab582a78b00b
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-manual#42818
No description provided.